--- a/lucky.html
+++ b/lucky.html
@@ -1,13 +1,15 @@
 <head>
-  <title>lucky</title>
+  <title>Lucky Draw</title>
 </head>
 
 <body>
-  {{> hello}}
+  {{> main}}
 </body>
 
-<template name="hello">
-  <h1>Hello World!</h1>
-  {{greeting}}
-  <input type="button" value="Click" />
+<template name="main">
+	{{#if mobileUI }}
+		<h1>mobile UI here</h1>
+	{{else}}
+		<h1>desktop UI here</h1>
+	{{/if}}
 </template>
