--- a/lucky.html
+++ b/lucky.html
@@ -9,7 +9,9 @@
 <template name="main">
 	{{#if mobileUI }}
 		<h1>mobile UI here</h1>
+		<input type="button" value="Click" />
 	{{else}}
 		<h1>desktop UI here</h1>
+		<div>{{messageFromMobile}}</div>
 	{{/if}}
 </template>
