--- a/lucky.html
+++ b/lucky.html
@@ -1,15 +1,18 @@
 <head>
   <title>Lucky Draw</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-  {{> main}}
+	<div class="container">
+		{{> main}}
+	</div>	
 </body>
 
 <template name="main">
 	{{#if mobileUI }}
 		<h1>mobile UI here</h1>
-		<input type="button" value="Click" />
+		<button class="btn btn-large btn-primary" type="submit">Control something on desktop UI</button>
 	{{else}}
 		<h1>desktop UI here</h1>
 		<div>{{messageFromMobile}}</div>
